--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dart_sdp_transform
+name: sdp_transform
 version: 0.0.1
 author: cloudwebrtc <duanweiwei1982@gmail.com>
 description: Dart implementation of sdp-transform
