--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ authors:
 description: Dart implementation of sdp-transform
 homepage: https://github.com/cloudwebrtc/dart-sdp-transform
 environment:
-  sdk: '<3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dev_dependencies:
-  test: ^1.9.3
+  test: ^1.16.8
