--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,9 @@
 name: sdp_transform
-version: 0.2.0
-authors: 
-- cloudwebrtc <duanweiwei1982@gmail.com>
-- rlsutton1 <rlustton1@optusnet.com.au>
-- https://github.com/clux/sdp-transform
+version: 0.3.0
 description: Dart implementation of sdp-transform
 homepage: https://github.com/cloudwebrtc/dart-sdp-transform
 environment:
-  sdk: '<3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dev_dependencies:
   test: ^1.9.3
